--- a/about.html
+++ b/about.html
@@ -3,8 +3,6 @@
 <title>عن منصة حصيف</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="./assets/style.css">
-</head><body><main class="container py-6">
-<a href="./" class="btn mb-3">الرجوع</a>
-<section class="card"><div class="section-title">عن منصة حصيف</div><p class="text-slate-700">نص تجريبي قابل للاستبدال بالنص الرسمي.</p></section>
-</main></body></html>
+<link rel="stylesheet" href="./assets/style.css"></head><body>
+<main class="container py-6"><a href="./" class="btn mb-3">الرجوع</a>
+<section class="card"><div class="section-title">عن منصة حصيف</div><p class="text-slate-700">نص تجريبي قابل للاستبدال بالنص الرسمي.</p></section></main></body></html>
