--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="ar" dir="rtl"><head>
 <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>منصة حصيف — v22.1</title>
+<title>منصة حصيف — v22.2</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="./assets/style.css">
@@ -34,7 +34,10 @@
     </div>
     <div class="mt-3 sponsor">
       <img src="./assets/talbiya-company.png" alt="شركة تلبية للبحث والتطوير">
-      <div class="text-sm"><div class="font-bold">الراعي الرسمي: شركة تلبية للبحث والتطوير</div><div class="text-slate-600">من مبادرة تلبية انطلقت منصة حصيف</div></div>
+      <div class="text-sm">
+        <div class="font-bold">الراعي الرسمي: شركة تلبية للبحث والتطوير</div>
+        <div class="text-slate-600">من مبادرة تلبية انطلقت منصة حصيف</div>
+      </div>
       <div class="grow"></div>
       <img src="./assets/talbiya-initiative.png" alt="مبادرة تلبية" style="height:52px">
     </div>
@@ -54,18 +57,7 @@
     </div>
   </section>
 
-  <section class="card mt-4">
-    <div class="section-title">الشركاء في النجاح</div>
-    <div class="partners-logos">
-      <img src="./assets/talbiya-company.png" alt="شركة تلبية">
-      <img src="./assets/talbiya-initiative.png" alt="مبادرة تلبية">
-      <span class="badge">SDB</span><span class="badge">Monsha'at</span><span class="badge">NCNP</span><span class="badge">HRSD</span><span class="badge">MEP</span><span class="badge">RDIA</span><span class="badge">NDF</span><span class="badge">ASDA</span><span class="badge">ADAA</span>
-    </div>
-  </section>
-
-  <footer class="footer container">
-    © منصة حصيف — إصدار v22.1 (نموذج أولي)
-  </footer>
+  <footer class="footer container">© منصة حصيف — إصدار v22.2 (نموذج أولي)</footer>
 </main>
 
 <script src="./assets/shared.js"></script>
