--- a/terms.html
+++ b/terms.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html><html lang="ar" dir="rtl"><head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>اتفاقية الاستخدام</title>
-<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="./assets/style.css"></head><body>
-<main class="container py-6"><a href="./" class="btn mb-3">الرجوع</a>
-<section class="card"><div class="section-title">اتفاقية الاستخدام</div><p class="text-slate-700">نص تجريبي قابل للاستبدال بالنص الرسمي.</p></section></main></body></html>
+<!DOCTYPE html><html lang='ar' dir='rtl'><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width, initial-scale=1'/><title>اتفاقية الاستخدام</title><link href='https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap' rel='stylesheet'><script src='https://cdn.tailwindcss.com'></script><link rel='stylesheet' href='./assets/style.css'></head><body><main class='container py-6'><a href='./' class='btn mb-3'>الرجوع</a><section class='card'><div class='section-title'>اتفاقية الاستخدام</div><p class='text-slate-700'>نص تجريبي قابل للاستبدال.</p></section></main></body></html>
